examples/test/testpolicy14699.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14699
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key49: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value21
      podSelector:
        matchLabels:
          key2: value12
          key14: value16
          key31: value4
